feito correções e ajustado bugs(ajuda do plantão)

--- a/quinzena2/landing-page/index.html
+++ b/quinzena2/landing-page/index.html
@@ -11,7 +11,6 @@
 <body>
 	<div id="cabecalho_mobile">
 		<div>
-			<img class="logo_mobile" src="img/mobile_logo.png" />
 
 			<input id="menu_hamburguer" class="input_de_checagem" type="checkbox">
 			<label for="menu_hamburguer">
@@ -42,32 +41,33 @@
 
 		<br>
 		<br>
-
-		<div id="navigation" data-onepage="true">
-			<ul class="navigation-menu nav">
-				<li class="menu_desktop">
-					<a href="#quem_somos" class="nav-item" data-scroll="true">Quem somos</a>
-				</li>
-				<li class="menu_desktop">
-					<a href="#products" class="nav-item" data-scroll="true">Nossos serviços</a>
-				</li>
-				<li class="menu_desktop">
-					<a target="_blank" href="formulario.html" class="nav-item" data-scroll="true">Trabalhe conosco</a>
-				</li>
-				<li class="menu_desktop">
-					<a href="#cases" class="nav-item">Cases de sucesso</a>
-				</li>
-				<li class="menu_desktop">
-					<a href="#asks" class="nav-item">Dúvidas</a>
-				</li>
-				<li class="menu_desktop">
-					<a href="#promo" class="nav-item" data-scroll="true">Para sua empresa</a>
-				</li>
-				<li class="menu_desktop">
-					<a href="#contact" class="nav-item" data-scroll="true">Contato</a>
-				</li>
-			</ul>
-		</div>
+		<header>
+			<div id="navigation" data-onepage="true">
+				<ul class="navigation-menu nav">
+					<li class="menu_desktop">
+						<a href="#quem_somos" class="nav-item" data-scroll="true">Quem somos</a>
+					</li>
+					<li class="menu_desktop">
+						<a href="#products" class="nav-item" data-scroll="true">Nossos serviços</a>
+					</li>
+					<li class="menu_desktop">
+						<a target="_blank" href="formulario.html" class="nav-item" data-scroll="true">Trabalhe
+							conosco</a>
+					</li>
+					<li class="menu_desktop">
+						<a href="#cases" class="nav-item">Cases de sucesso</a>
+					</li>
+					<li class="menu_desktop">
+						<a href="#asks" class="nav-item">Dúvidas</a>
+					</li>
+					<li class="menu_desktop">
+						<a href="#promo" class="nav-item" data-scroll="true">Para sua empresa</a>
+					</li>
+					<li class="menu_desktop">
+						<a href="#contact" class="nav-item" data-scroll="true">Contato</a>
+					</li>
+				</ul>
+			</div>
 
 
 	</nav>
@@ -206,19 +206,19 @@
 		<h3 class="text-social">
 			Siga nossas redes sociais:
 		</h3>
-		
+
 		<div class="redes_sociais">
-			<a href="#social">
+			<a target="_blank" href="https://github.com/">
 				<img src="img/github.png" class="social"></a>
-		
 
-		
-			<a href="#social">
+
+
+			<a target="_blank" href="https://www.facebook.com/">
 				<img src="img/facebook.png" class="social"></a>
-		
 
-		
-			<a href="#social">
+
+
+			<a target="_blank" href="https://www.linkedin.com/">
 				<img src="img/linkedin.png" class="social"></a>
 		</div>
 
